# local-email-agent

./: .env  README.md  emails.json  local_agent.py  local_mail_server.py  main.py  pyproject.toml
